--- a/versione_0/versione_0.vcxproj
+++ b/versione_0/versione_0.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -130,6 +130,8 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BoolExpr.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NodeManager.cpp" />
+    <ClCompile Include="NodeManager.h" />
     <ClCompile Include="NumExpr.cpp" />
     <ClCompile Include="Statement.cpp" />
     <ClCompile Include="Visitor.cpp" />
@@ -137,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="BoolExpr.h" />
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="NumExpr.h" />
     <ClInclude Include="Statement.h" />
     <ClInclude Include="Visitor.h" />
