--- a/versione_0/versione_0.vcxproj
+++ b/versione_0/versione_0.vcxproj
@@ -129,22 +129,25 @@
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BoolExpr.cpp" />
+    <ClCompile Include="ExecutionVisitor.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NodeManager.cpp" />
     <ClCompile Include="NodeManager.h" />
     <ClCompile Include="NumExpr.cpp" />
     <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="PrintVisitor.cpp" />
     <ClCompile Include="Statement.cpp" />
     <ClCompile Include="Tokenizer.cpp" />
     <ClCompile Include="Tokenizer.h" />
-    <ClCompile Include="Visitor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="BoolExpr.h" />
     <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="ExecutionVisitor.h" />
     <ClInclude Include="NumExpr.h" />
     <ClInclude Include="Parser.h" />
+    <ClInclude Include="PrintVisitor.h" />
     <ClInclude Include="Statement.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="Visitor.h" />
